--- a/writer/index.html
+++ b/writer/index.html
@@ -2,9 +2,10 @@
 <html>
 
         <head>
-                <link rel="stylesheet" href="main.css">
-                <script src="stretchy.js" data-filter=".stretch *"></script>
-                <script src="main.js"></script>
+                <link rel="stylesheet" href="static/main.css">
+                <script src="static/stretchy.js" data-filter=".stretch *"></script>
+                <script> var url = "http://" + {{ .location }} </script>
+                <script src="static/main.js"></script>
                 <!-- <script src="http://cdn.ckeditor.com/4.7.3/full/ckeditor.js"></script> -->
                 <script src="http://cdn.ckeditor.com/4.7.3/standard/ckeditor.js"></script>
                 <!-- <script src="http://cdn.ckeditor.com/4.7.3/basic/ckeditor.js"></script> -->
