it's all broken

--- a/writer/images.html
+++ b/writer/images.html
@@ -4,19 +4,19 @@
         <head>
                 <link rel="stylesheet" href="static/main.css">
                 <script> var url = "http://" + {{ .location }} </script>
-                <script src="static/posts.js"></script>
+                <script src="static/images.js"></script>
 
         </head>
 
         <body>
                 <div id="body">
-                        <h1>All Blog Posts</h1>
-                        <div id="postHolder">
+                        <h1>All Images</h1>
+                        <div id="imageHolder">
                         </div>
                 </div>
                 <footer>
                         <input type="button" value="Create Posts" onclick="document.location.href='/'" />
-                        <input type="button" value="Manage Images" onclick="document.location.href='/images.html'" />
+                        <input type="button" value="Manage Posts" onclick="document.location.href='posts.html'"/>
                 </footer>
         </body>
 </html>
