--- a/writer/index.html
+++ b/writer/index.html
@@ -32,6 +32,7 @@
             </div>
             <footer>
                 <input type="button" value="Manage Posts" onclick="document.location.href='posts.html'"/>
+                <input type="button" value="Manage Images" onclick="document.location.href='images.html'" />
             </footer>
         </body>
 
