--- a/writer/images.html
+++ b/writer/images.html
@@ -12,7 +12,7 @@
         <body>
                 <div id="body">
                         <h1>All Images</h1>
-                        <form id="uploadbanner" enctype="multipart/form-data" method="post" action="http://localhost:8049/images/upload">
+                        <form id="uploadbanner" enctype="multipart/form-data" method="post" action="">
                             <input id="fileupload" name="filedata" type="file" />
                             <input type="submit" value="submit" id="submit" />
                         </form>
@@ -25,6 +25,10 @@
                 </footer>
         </body>
         <script>
-            loadImages()
+            window.onload = function() {
+                document.getElementById('uploadbanner').action = url + "/images/upload"
+                loadImages()
+            }
+
         </script>
 </html>
