--- a/writer/index.html
+++ b/writer/index.html
@@ -13,7 +13,7 @@
 
         <body>
             <div id="body">
-                <h1>SPEAR Blog</h1>
+                <h1>Blog Author</h1>
                 <div class="stretch">
                         <input id="title" placeholder="Post Title" type="text" />
                 </div>
