--- a/writer/posts.html
+++ b/writer/posts.html
@@ -16,7 +16,7 @@
                 </div>
                 <footer>
                         <input type="button" value="Create Posts" onclick="document.location.href='/'" />
-                        <input type="button" value="Manage Images" onclick="document.location.href='/images.html'" />
+                        <input type="button" value="Manage Images" onclick="document.location.href='images.html'" />
                 </footer>
         </body>
 </html>
